--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .paragraph {
             font-family: cursive;
             font-size: 20px;
-            color: white;
+            color: black;
             text-align: center;
             line-height: 1.5;
         }
